--- a/index.html
+++ b/index.html
@@ -92,9 +92,14 @@ function w3_open() { if (mySidebar.style.display === 'block')
 }// Close the sidebar with the close button
 function w3_close() {mySidebar.style.display = "none";} </script>
 	<!-- EMAIL FORM https://zotabox.com/dashboard/ --><script type="text/javascript">(function(d,s,id){var z=d.createElement(s);z.type="text/javascript";z.id=id;z.async=true;z.src="//static.zotabox.com/7/1/7144a7b28e2afa4ba16adef6b404a508/widgets.js";var sz=d.getElementsByTagName(s)[0];sz.parentNode.insertBefore(z,sz)}(document,"script","zb-embed-code"));</script>
-	<!-- CHAT OR EMAIL https://www.tawk.to/ --><script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script><!-- end of chat -->
+	
 	<!-- SUB & SHARE www.addthis.com/dashboard --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script> 
 <!-- That's all folks! --></body></html>
 <!-- Future ideas: search engine | podcast | more arduino and raspberry projects -->
 <!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023  |  Sub: papaspyrou.alexandros@gmail.com -->
 <!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com  |   -->
+
+<!-- ===================================================================================================   -->
+<!-- OLD CHAT OR EMAIL https://www.tawk.to/ > 
+<script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script>
+< end of old chat -->
