--- a/portflio.html
+++ b/portflio.html
@@ -1,3 +1,7 @@
+<!-- Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ By: Alexandros Papaspyrou
+Last Update: 17/9/2017   |  Pre-alpha Stage -->
+<!-- Computers and Automations --> 
 <!DOCTYPE html> 
 <html>
 <title>Papaspyrou Alexandros</title>
@@ -8,19 +12,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <!-- Aldrich text Style --><link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
-
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<!-- Lato text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
     height: 100%;
-    color: #777;
+/*    color: #777;   */
     line-height: 1.8;
 }
 
@@ -100,15 +98,12 @@ body, html {
     <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
 </nav>
 
-
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">My Projects</span>
   </div>
 </div>
-
-
 
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter w3-section">
@@ -199,24 +194,74 @@ body, html {
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
  
+ <!-- About Section -->
+<div class="w3-container" style="padding:20px 16px" id="about">
+<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+
+  <div class="w3-row-padding w3-center" style="margin-top:64px">
+    <div class="w3-quarter">
+      <i class="fa fa-code w3-margin-bottom w3-jumbo w3-center"></i>
+      <p class="w3-large"><b>Code</b></p>
+      <p>kremaλaki (VB)</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large"><b>Make</b></p>
+            <p>LDR swich 
+			<br>Michatron</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-paper-plane-o w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large"><b>ideas & designs</b></p>
+           <p>Blog</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-folder-open-o w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large"><b>Files Repository</b></p>
+           <p>DropBox</p>
+    </div>
+  </div>
+</div>
 </div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+ <!-- Footer -->
+
+<!-- SM --><div class="w3-black w3-center w3-padding-12">
+<a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:white"></i></a>
+<a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:white"></i></a>
+<a href=" http://stackoverflow.com/users/7315499/alexispapy "><i class="fa fa-stack-overflow" style="font-size:14px;color:white"></i></a>
+<a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a>
+<a href=" https://www.reddit.com/user/alexispapy "><i class="fa fa-reddit-alien" style="font-size:14px;color:white"></i></a>
+<a href="https://www.youtube.com/channel/UCticUCJNkJpUvLq6F-1Zujw "><i class="fa fa-youtube-play" style="font-size:14px;color:white"></i></a> 
+<a href=" https://www.flickr.com/photos/alexispapy/albums"><i class="fa fa-flickr" style="font-size:14px;color:white"></i></a>
+<a href="https://www.facebook.com/papaspyrou.alexandros"><i class="fa fa-facebook" style="font-size:14px;color:white"></i></a> 
+<a href=" http://www.slideshare.net/alexandrospapaspurou "><i class="fa fa-slideshare" style="font-size:14px;color:white"></i></a>
+<a href="https://www.instagram.com/alexandrospapaspyrou"><i class="fa fa-instagram" style="font-size:14px;color:white"></i></a>
+<a href=" https://plus.google.com/+AlexandrosPapaspyrou "><i class="fa fa-google-plus" style="font-size:14px;color:white"></i></a>
+<a href=" http://www.instructables.com/member/alexispapy/"><i class="fa fa-rocket" style="font-size:14px;color:white"></i></a>
+<a href=" https://bitbucket.org/alexispapy "><i class="fa fa-bitbucket" style="font-size:14px;color:white"></i></a>
+<a href=" https://vimeo.com/alexispapy "><i class="fa fa-vimeo" style="font-size:14px;color:white"></i></a>
+<a href=" https://gr.pinterest.com/alexispapy "><i class="fa fa-pinterest-p" style="font-size:14px;color:white"></i></a>
+<a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr"></i></a>
+<a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
+<a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a>
+<br><!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i>Papaspyrou Alexandros 2017</div>
+<!-- End footer -->
 </footer>
  
-<!-- Add Google Maps -->
 <script>
+// Script to open and close sidebar
+function w3_open() {
+    document.getElementById("mySidebar").style.display = "block";
+    document.getElementById("myOverlay").style.display = "block";
+}
+function w3_close() {
+    document.getElementById("mySidebar").style.display = "none";
+    document.getElementById("myOverlay").style.display = "none"
+}
 
 // Modal Image Gallery
 function onClick(element) {
@@ -225,7 +270,7 @@ function onClick(element) {
   var captionText = document.getElementById("caption");
   captionText.innerHTML = element.alt;
 }
-
+/*
 // Change style of navbar on scroll
 window.onscroll = function() {myFunction()};
 function myFunction() {
@@ -236,7 +281,7 @@ function myFunction() {
         navbar.className = navbar.className.replace(" w3-card-2 w3-animate-top w3-white", "");
     }
 }
-
+  */
 // Used to toggle the menu on small screens when clicking on the menu button
 function toggleFunction() {
     var x = document.getElementById("navDemo");
@@ -247,6 +292,9 @@ function toggleFunction() {
     }
 }
 </script>
+<!-- That's all folks! --></body></html>
+<!-- Future ideas: search engine | podcast | more arduino and raspberry projects -->
+<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023  |  Sub: papaspyrou.alexandros@gmail.com -->
+<!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com   -->
 
-</body>
-</html>
+<!-- ===================== -->
