--- a/portflio.html
+++ b/portflio.html
@@ -1,6 +1,7 @@
+
 <!-- Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 17/9/2017   |  Pre-alpha Stage -->
+Last Update: 20/9/2017   |  Pre-alpha Stage -->
 <!-- Computers and Automations --> 
 <!DOCTYPE html> 
 <html>
@@ -105,74 +106,40 @@ body, html {
   </div>
 </div>
 
-<div class="w3-row w3-center w3-dark-grey w3-padding-16">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">?+</span><br>
-    ?
+<div class="w3-row w3-center w3-black w3-padding-8">
+  <div class="w3-third w3-section">
+    <span class="w3-xlarge">4+</span><br>
+    κατασκευές
   </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">?+</span><br>
-    Projects Done
+  <div class="w3-third w3-section">
+    <span class="w3-xlarge">4+</span><br>
+    εκθέσεις
   </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">?+</span><br>
-     ?
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">?+</span><br>
-    ?
-  </div>
+  <div class="w3-third w3-section">
+    <span class="w3-xlarge">4+</span><br>
+    έρχονται
+</div>
 </div>
 
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
+    <span class="w3-xxlarge w3-text-white w3-wide">Makes</span>
   </div>
 </div>
 
-<!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
+<!-- Container (1enotita Section) -->
+<div class="w3-content w3-container w3-padding-64" id="1enotita">
+    <h4 class="w3-center">Μελέτη και Κατασκευή του</h4>
+    <h3 class="w3-center">MICHATRON</h3>
+<p class="w3-center"><em>Ρομποτάκι, αυτοκινούμενη ρομποτική πλατφόρμα ή όπως αλλιώς θέλετε να το πείτε… Εγώ το λέω Michatron. Σε μια πλαστική βάση με 2 ρόδες (και μια μπίλια για ισορροπία), βάζουμε αισθητήρια led-άκια, κινητήρες και το ArduinoUno. Το Michatron… Ξεκινάει με μη χειροκίνητο τρόπο… Ακολουθεί μια μαύρη γραμμή… Προσπερνάει τα εμπόδια που θα βρει… και όταν φτάσει στο τέρμα… Σταματάει αυτόματα!</em></p><br>
+  
+  <h4 class="w3-center">Το κύκλωμα του</h4>
+    <h3 class="w3-center">Φωτοδιακόπτη</h3>
+<p class="w3-center"><em>Ο πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.
+Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.
+<br>Κάπως έτσι το φτιάξαμε στο εργ. Ηλ. Συστημάτων.</em></p><br>
 
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
-      <img src="/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
-    </div>
-  </div>
-
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
-    </div>
-
-    <div class="w3-col m3">
-      <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
-    </div>
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
-  </div>
 </div>
 
 <!-- Modal for full size images on click-->
@@ -187,13 +154,15 @@ body, html {
 <!-- Third Parallax Image with Portfolio Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
+     <span class="w3-xxlarge w3-text-white w3-wide">γραπτά</span>
   </div>
 </div>
 
-<!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
- 
+<!-- Container (2enotita Section) -->
+<div class="w3-content w3-container w3-padding-64" id="2enotita">
+    <h4 class="w3-center">Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. </h4>
+    <h3 class="w3-center">“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet)</h3>
+<p class="w3-center"><em>❝ Ας κλείσουμε με την ελπίδα πως πάντα η τεχνολογία θα υπάρχει και θα εξελίσσεται με σκοπό να διευκολύνει τον άνθρωπο και να του προσφέρει μια πιο ευχάριστη και δημιουργική ζωή. Αυτός είναι αλώστε και ο σκοπός της, και οι κοινωνίες θα πρέπει να φροντίσουν να μην υπάρξει ο κίνδυνος να αποκλίνει από αυτόν. ❞</em></p><br> 
  <!-- About Section -->
 <div class="w3-container" style="padding:20px 16px" id="about">
 <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
