--- a/logo.html
+++ b/logo.html
@@ -1,3 +1,8 @@
+<!--
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+-->
 <!DOCTYPE html>
 <html>
 <title>W3.CSS Template</title>
@@ -18,11 +23,7 @@ body, html {height: 100%}
     background-position: center;
     background-size: cover;
 }
-
-
-
-
-  
+ 
 .fullscreen-bg {
     position: fixed;
     top: 0;
@@ -56,7 +57,7 @@ body, html {height: 100%}
 
 <div class="fullscreen-bg">
 <video loop muted autoplay poster="https://68.media.tumblr.com/72f70f217f99c7a24cbf91c641562c5f/tumblr_ou1xb2tPKd1si59zfo1_500.gif" class="fullscreen-bg__video">
-<source src="https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/947/7/179739327/586747331.mp4?token=1505211718-0xc93fed49d9180e47066b7b7c4a236393f2447785" type="video/mp4"></video>
+<source src="https://alexispapy.tumblr.com/video_file/t:weA2VFQSF-xF8Ot0glZ8CA/165556092830/tumblr_owlgzuUeWx1si59zf/480" type="video/mp4"></video>
     </div>
 
     <div class="content">
@@ -74,14 +75,6 @@ body, html {height: 100%}
     <i class="fa fa-creative-commons" style="font-size:14px;color:white"></i>
     Papaspyrou Alexandros</h>
 </div></span>
-
-
-
-
-
-
-
-
 
 </body>
 </html>
