--- a/projects.html
+++ b/projects.html
@@ -1,68 +1,174 @@
-<!-- @ProjectsPage
-Welcome in my personal website 100% HTML
-Handcrafted With ❤ By: Alexandros Papaspyrou [CC-BY]
-Last Update: 10/6/2017 
-Contact: alexispapy@gmail.com
--->
-<!DOCTYPE html>
+<!--
+
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+
+Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ By: Alexandros Papaspyrou
+Last Update: 21/9/2017  |  Pre-alpha Stage -->
+
+<!DOCTYPE html> 
 <html>
-<title>Papaspyrou Alexandros</title>
+<title>Papaspyrou Alexandros | Projects</title>
 <link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
+<!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<!-- Aldrich text Style --><link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+<!-- Lato text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
     height: 100%;
+/*    color: #777;   */
     line-height: 1.8;
 }
-/* Full height image header */
-.bgimg-1 {
+
+/* Create a Parallax Effect */
+.bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: fixed;
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+}
+
+/* First image (Logo. Full height) */
+.bgimg-1 {
+    background-image: url('https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg');
     min-height: 100%;
 }
-.w3-bar .w3-button {
-    padding: 16px;
+
+/* Second image (Portfolio) */
+.bgimg-2 {
+    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    min-height: 400px;
+}
+
+/* Third image (Contact) */
+.bgimg-3 {
+    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    min-height: 400px;
+}
+
+.w3-wide {letter-spacing: 10px;}
+.w3-hover-opacity {cursor: pointer;}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: scroll;
+    }
 }
 </style>
-<body class="w3-light-grey w3-content" style="max-width:1600px">
-
+<body>
+<!-- MENU -->
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-black w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
-  
-<a href="https://a-papaspyrou.000webhostapp.com" class="w3-bar-item w3-button w3-wide">
-
-<img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:30px;" class="w3-circle w3-left w3-hover-opacity"> &nbsp;
-
+	<div class="w3-bar w3-black w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
+<a href="http://a-papaspyrou.tk" class="w3-bar-item w3-button w3-wide">
+<img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:30px;" class="w3-circle w3-left w3-hover-opacity"> &nbsp; 
 <b> Papaspyrou</b> Alexandros</a>
-    <!-- Right-sided navbar links -->
-          <div class="w3-right w3-hide-small"><a href="https://robodayblog.wordpress.com/" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a></div>
-<div class="w3-right w3-hide-small"> <a href="https://a-papaspyrou.000webhostapp.com/about.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>  </div>
-<div class="w3-right w3-hide-small"><a href="https://a-papaspyrou.000webhostapp.com/cv.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me</a></div>
-<div class="w3-right w3-hide-small"><a href="https://a-papaspyrou.000webhostapp.com/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>  </div>
 
-</div><!-- Hide right-floated links on small screens and replace them with a menu icon -->
-<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
-<i class="fa fa-bars w3-padding-right w3-padding-left"></i></a></div>
-
-<!-- Sidenav on small screens when clicking the menu icon -->
-<nav class="w3-sidenav w3-black w3-card-2 w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidenav">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-large w3-padding-16">Close </a>
-  <a href="https://a-papaspyrou.000webhostapp.com/projects.html" onclick="w3_close()">Creations</a>
-  <a href="https://a-papaspyrou.000webhostapp.com/cv.html" onclick="w3_close()">Me</a>
-
+<!-- Right-sided navbar links -->
+<div class="w3-right w3-hide-small">
+	<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
+	<a href="https://alexandroshub.github.io/me.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
+	<a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
+	<a href="https://robodayblog.wordpress.com/" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a>
+	<a href="https://m.me/papaspyrou.alexandros"  class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i></a>
+</div>
+<!-- Hide right-floated links on small screens and replace them with a menu icon -->
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()"><i class="fa fa-bars"></i></a></div></div>
+<!-- Sidebar on small screens when clicking the menu icon -->
+<nav class="w3-sidebar w3-bar-block w3-black w3-card-2 w3-animate-left w3-hide-large w3-hide-medium" style="display:none" id="mySidebar">
+<a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red" >Close ×</a> 
+	<a href="https://alexandroshub.github.io/projects.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
+	<a href="https://alexandroshub.github.io/me.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
+	<a href="https://alexandroshub.github.io/map.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
+	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a> 
+	<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
+<hr><!-- social left -->
+    &nbsp; <a href="https://getpocket.com/@27bdfp78TaK97g4e6dA987eA2dgaT938154I38G999WdrUw2a6c6ei72S21olQ68">
+    <i class="fa fa-get-pocket w3-hover-opacity" style="font-size:14px;color:white"></i></a> &nbsp; | 
+    	&nbsp; <a href="https://www.facebook.com/papaspyrou.a">
+    <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+    	&nbsp; <a href=" https://twitter.com/A_Papaspyrou ">
+    <i class="fa fa-twitter w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+    	&nbsp; <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
+    <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+  	&nbsp; <a href=" https://www.reddit.com/user/alexispapy">
+    <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
 </nav>
-<br><br> <b><p style="font-family: Aldrich; font-size:300%; text-align:center;">My Creations</p></b>
-<p style="font-family:Aldrich; font-size:150%; text-align:center;">take a look.</p>
-<br> 
-<!-- About Section -->
+
+<!-- First Parallax Image with Logo Text -->
+<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+  <div class="w3-display-middle" style="white-space:nowrap;">
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">My Projects</span>
+  </div>
+</div>
+
+<div class="w3-row w3-center w3-black w3-padding-8">
+  <div class="w3-third w3-section">
+    <span class="w3-xlarge">4+</span><br>
+    κατασκευές
+  </div>
+  <div class="w3-third w3-section">
+    <span class="w3-xlarge">4+</span><br>
+    εκθέσεις
+  </div>
+  <div class="w3-third w3-section">
+    <span class="w3-xlarge">4+</span><br>
+    έρχονται
+</div>
+</div>
+
+<!-- Second Parallax Image with Portfolio Text -->
+<div class="bgimg-2 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+    <span class="w3-xxlarge w3-text-white w3-wide">Makes</span>
+  </div>
+</div>
+
+<!-- Container (1enotita Section) -->
+<div class="w3-content w3-container w3-padding-64" id="1enotita">
+    <h4 class="w3-center">Μελέτη και Κατασκευή του</h4>
+    <h3 class="w3-center">MICHATRON</h3>
+<p class="w3-center"><em>Ρομποτάκι, αυτοκινούμενη ρομποτική πλατφόρμα ή όπως αλλιώς θέλετε να το πείτε… Εγώ το λέω Michatron. Σε μια πλαστική βάση με 2 ρόδες (και μια μπίλια για ισορροπία), βάζουμε αισθητήρια led-άκια, κινητήρες και το ArduinoUno. Το Michatron… Ξεκινάει με μη χειροκίνητο τρόπο… Ακολουθεί μια μαύρη γραμμή… Προσπερνάει τα εμπόδια που θα βρει… και όταν φτάσει στο τέρμα… Σταματάει αυτόματα!</em></p><br>
+  
+  <h4 class="w3-center">Το κύκλωμα του</h4>
+    <h3 class="w3-center">Φωτοδιακόπτη</h3>
+<p class="w3-center"><em>Ο πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.
+Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.
+<br>Κάπως έτσι το φτιάξαμε στο εργ. Ηλ. Συστημάτων.</em></p><br>
+
+</div>
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
+
+<!-- Third Parallax Image with Portfolio Text -->
+<div class="bgimg-3 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+     <span class="w3-xxlarge w3-text-white w3-wide">γραπτά</span>
+  </div>
+</div>
+
+<!-- Container (2enotita Section) -->
+<div class="w3-content w3-container w3-padding-64" id="2enotita">
+    <h4 class="w3-center">Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. </h4>
+    <h3 class="w3-center">“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet)</h3>
+<p class="w3-center"><em>❝ Ας κλείσουμε με την ελπίδα πως πάντα η τεχνολογία θα υπάρχει και θα εξελίσσεται με σκοπό να διευκολύνει τον άνθρωπο και να του προσφέρει μια πιο ευχάριστη και δημιουργική ζωή. Αυτός είναι αλώστε και ο σκοπός της, και οι κοινωνίες θα πρέπει να φροντίσουν να μην υπάρξει ο κίνδυνος να αποκλίνει από αυτόν. ❞</em></p><br> 
+ <!-- About Section -->
 <div class="w3-container" style="padding:20px 16px" id="about">
 <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
 
@@ -90,10 +196,12 @@ body, html {
     </div>
   </div>
 </div>
+</div>
 
-
-<!-- End page content -->
 <!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+ <!-- Footer -->
 
 <!-- SM --><div class="w3-black w3-center w3-padding-12">
 <a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:white"></i></a>
@@ -116,48 +224,51 @@ body, html {
 <a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a>
 <br><!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i>Papaspyrou Alexandros 2017</div>
 <!-- End footer -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</footer>
+ 
 <script>
 // Script to open and close sidebar
 function w3_open() {
     document.getElementById("mySidebar").style.display = "block";
     document.getElementById("myOverlay").style.display = "block";
 }
- 
 function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
     document.getElementById("myOverlay").style.display = "none"
 }
+
+// Modal Image Gallery
+function onClick(element) {
+  document.getElementById("img01").src = element.src;
+  document.getElementById("modal01").style.display = "block";
+  var captionText = document.getElementById("caption");
+  captionText.innerHTML = element.alt;
+}
+/*
+// Change style of navbar on scroll
+window.onscroll = function() {myFunction()};
+function myFunction() {
+    var navbar = document.getElementById("myNavbar");
+    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+        navbar.className = "w3-bar" + " w3-card-2" + " w3-animate-top" + " w3-white";
+    } else {
+        navbar.className = navbar.className.replace(" w3-card-2 w3-animate-top w3-white", "");
+    }
+}
+  */
+// Used to toggle the menu on small screens when clicking on the menu button
+function toggleFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
 </script>
-<!-- chat -->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();</script>
-</body>
-</html>
+<!-- That's all folks! --></body></html>
+<!-- Future ideas: search engine | podcast | more arduino and raspberry projects -->
+<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023  |  Sub: papaspyrou.alexandros@gmail.com -->
+<!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com   -->
+
+<!-- ===================== -->
