--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!-- Welcome in my personal website 100% HTML Hosted by Github
+<!--
+
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+
+Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 10/10/2017 -->
-<!-- Computers and Automations -->
-<!-- Pre-alpha Stage -->
+Last Update: 21/9/2017  |  Pre-alpha Stage -->
+
 <!DOCTYPE html> 
 <html>
-<title>Papaspyrou Alexandros</title>
+<title>Papaspyrou Alexandros | Projects</title>
 <link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,21 +18,54 @@ Last Update: 10/10/2017 -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <!-- Aldrich text Style --><link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+<!-- Lato text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
-body, html { height: 100%;      line-height: 1.8; }
-/* Full height image header */
-.bgimg-1 {
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+body, html {
+    height: 100%;
+/*    color: #777;   */
+    line-height: 1.8;
+}
+
+/* Create a Parallax Effect */
+.bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: fixed;
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+}
+
+/* First image (Logo. Full height) */
+.bgimg-1 {
+    background-image: url('https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg');
     min-height: 100%;
 }
-.w3-bar .w3-button {
-    padding: 16px;
+
+/* Second image (Portfolio) */
+.bgimg-2 {
+    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    min-height: 400px;
+}
+
+/* Third image (Contact) */
+.bgimg-3 {
+    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    min-height: 400px;
+}
+
+.w3-wide {letter-spacing: 10px;}
+.w3-hover-opacity {cursor: pointer;}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: scroll;
+    }
 }
 </style>
 <body>
+<!-- MENU -->
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
 	<div class="w3-bar w3-black w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
@@ -65,41 +103,146 @@ body, html { height: 100%;      line-height: 1.8; }
   	&nbsp; <a href=" https://www.reddit.com/user/alexispapy">
     <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
 </nav>
-<!-- Header with full-height image -->
-<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-	<div class="w3-display-middle w3-text-white" style="padding:48px">
-	<div class="w3-display-middle" style="white-space:nowrap;">
-	<span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">WELCOME 
-	<span class="w3-hide-small w3-hide-medium">in my personal website</span></span></div></div>
-<!-- SC MEDIA --><span class="w3-hide-small">
-<div class="w3-display-bottomleft w3-text-white w3-large" style="padding:24px 48px">
-    <a href="https://www.facebook.com/papaspyrou.a">
-    <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
-    <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
-    <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
-    <a href=" https://www.reddit.com/user/alexispapy">
-    <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
-	<!-- CC -->
-     | <h style="font-family:Aldrich; font-size:15px;">
-    <i class="fa fa-creative-commons" style="font-size:14px;color:white"></i>
-    Papaspyrou Alexandros<span class="w3-hide-small w3-hide-medium"> 2017</span></h>
-</div></span>
-<!-- end of header --></header>
-<script>// Toggle between showing and hiding the sidebar when clicking the menu icon
-var mySidebar = document.getElementById("mySidebar");
-function w3_open() { if (mySidebar.style.display === 'block') 
-{mySidebar.style.display = 'none';} else {mySidebar.style.display = 'block';}
-}// Close the sidebar with the close button
-function w3_close() {mySidebar.style.display = "none";} </script>
-	<!-- EMAIL FORM https://zotabox.com/dashboard/ --><script type="text/javascript">(function(d,s,id){var z=d.createElement(s);z.type="text/javascript";z.id=id;z.async=true;z.src="//static.zotabox.com/7/1/7144a7b28e2afa4ba16adef6b404a508/widgets.js";var sz=d.getElementsByTagName(s)[0];sz.parentNode.insertBefore(z,sz)}(document,"script","zb-embed-code"));</script>
-	
-	<!-- SUB & SHARE www.addthis.com/dashboard --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55942e200b33038e"></script> 
+
+<!-- First Parallax Image with Logo Text -->
+<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+  <div class="w3-display-middle" style="white-space:nowrap;">
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">My Projects</span>
+  </div>
+</div>
+
+<div class="w3-row w3-center w3-black w3-padding-8">
+  <div class="w3-third w3-section">
+    <span class="w3-xlarge">4+</span><br>
+    κατασκευές
+  </div>
+  <div class="w3-third w3-section">
+    <span class="w3-xlarge">4+</span><br>
+    εκθέσεις
+  </div>
+  <div class="w3-third w3-section">
+    <span class="w3-xlarge">4+</span><br>
+    έρχονται
+</div>
+</div>
+
+<!-- Second Parallax Image with Portfolio Text -->
+<div class="bgimg-2 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+    <span class="w3-xxlarge w3-text-white w3-wide">Makes</span>
+  </div>
+</div>
+
+<!-- Container (1enotita Section) -->
+<div class="w3-content w3-container w3-padding-64" id="1enotita">
+    <h4 class="w3-center">Μελέτη και Κατασκευή του</h4>
+    <h3 class="w3-center">MICHATRON</h3>
+<p class="w3-center"><em>Ρομποτάκι, αυτοκινούμενη ρομποτική πλατφόρμα ή όπως αλλιώς θέλετε να το πείτε… Εγώ το λέω Michatron. Σε μια πλαστική βάση με 2 ρόδες (και μια μπίλια για ισορροπία), βάζουμε αισθητήρια led-άκια, κινητήρες και το ArduinoUno. Το Michatron… Ξεκινάει με μη χειροκίνητο τρόπο… Ακολουθεί μια μαύρη γραμμή… Προσπερνάει τα εμπόδια που θα βρει… και όταν φτάσει στο τέρμα… Σταματάει αυτόματα!</em><br><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button>  <button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-code"></i></button></p><br>
+  
+  <h4 class="w3-center">Το κύκλωμα του</h4>
+    <h3 class="w3-center">Φωτοδιακόπτη</h3>
+<p class="w3-center"><em>Ο πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.
+Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.
+<br>Κάπως έτσι το φτιάξαμε στο εργ. Ηλ. Συστημάτων.</em><br><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button>  <button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-gears"></i></button></p><br>
+
+</div>
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
+
+<!-- Third Parallax Image with Portfolio Text -->
+<div class="bgimg-3 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+     <span class="w3-xxlarge w3-text-white w3-wide">γραπτά</span>
+  </div>
+</div>
+
+<!-- Container (2enotita Section) -->
+<div class="w3-content w3-container w3-padding-64" id="2enotita">
+    <h4 class="w3-center">Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. </h4>
+    <h3 class="w3-center">“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet)</h3>
+<p class="w3-center"><em>❝ Ας κλείσουμε με την ελπίδα πως πάντα η τεχνολογία θα υπάρχει και θα εξελίσσεται με σκοπό να διευκολύνει τον άνθρωπο και να του προσφέρει μια πιο ευχάριστη και δημιουργική ζωή. Αυτός είναι αλώστε και ο σκοπός της, και οι κοινωνίες θα πρέπει να φροντίσουν να μην υπάρξει ο κίνδυνος να αποκλίνει από αυτόν. ❞</em><br><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button></p><br>
+
+<!-- About Section -->
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+ <!-- Footer -->
+
+<!-- SM --><div class="w3-black w3-center w3-padding-12">
+<a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:white"></i></a>
+<a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:white"></i></a>
+<a href=" http://stackoverflow.com/users/7315499/alexispapy "><i class="fa fa-stack-overflow" style="font-size:14px;color:white"></i></a>
+<a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a>
+<a href=" https://www.reddit.com/user/alexispapy "><i class="fa fa-reddit-alien" style="font-size:14px;color:white"></i></a>
+<a href="https://www.youtube.com/channel/UCticUCJNkJpUvLq6F-1Zujw "><i class="fa fa-youtube-play" style="font-size:14px;color:white"></i></a> 
+<a href=" https://www.flickr.com/photos/alexispapy/albums"><i class="fa fa-flickr" style="font-size:14px;color:white"></i></a>
+<a href="https://www.facebook.com/papaspyrou.alexandros"><i class="fa fa-facebook" style="font-size:14px;color:white"></i></a> 
+<a href=" http://www.slideshare.net/alexandrospapaspurou "><i class="fa fa-slideshare" style="font-size:14px;color:white"></i></a>
+<a href="https://www.instagram.com/alexandrospapaspyrou"><i class="fa fa-instagram" style="font-size:14px;color:white"></i></a>
+<a href=" https://plus.google.com/+AlexandrosPapaspyrou "><i class="fa fa-google-plus" style="font-size:14px;color:white"></i></a>
+<a href=" http://www.instructables.com/member/alexispapy/"><i class="fa fa-rocket" style="font-size:14px;color:white"></i></a>
+<a href=" https://bitbucket.org/alexispapy "><i class="fa fa-bitbucket" style="font-size:14px;color:white"></i></a>
+<a href=" https://vimeo.com/alexispapy "><i class="fa fa-vimeo" style="font-size:14px;color:white"></i></a>
+<a href=" https://gr.pinterest.com/alexispapy "><i class="fa fa-pinterest-p" style="font-size:14px;color:white"></i></a>
+<a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr"></i></a>
+<a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
+<a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a>
+<br><!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i>Papaspyrou Alexandros 2017</div>
+<!-- End footer -->
+</footer>
+ 
+<script>
+// Script to open and close sidebar
+function w3_open() {
+    document.getElementById("mySidebar").style.display = "block";
+    document.getElementById("myOverlay").style.display = "block";
+}
+function w3_close() {
+    document.getElementById("mySidebar").style.display = "none";
+    document.getElementById("myOverlay").style.display = "none"
+}
+
+// Modal Image Gallery
+function onClick(element) {
+  document.getElementById("img01").src = element.src;
+  document.getElementById("modal01").style.display = "block";
+  var captionText = document.getElementById("caption");
+  captionText.innerHTML = element.alt;
+}
+/*
+// Change style of navbar on scroll
+window.onscroll = function() {myFunction()};
+function myFunction() {
+    var navbar = document.getElementById("myNavbar");
+    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+        navbar.className = "w3-bar" + " w3-card-2" + " w3-animate-top" + " w3-white";
+    } else {
+        navbar.className = navbar.className.replace(" w3-card-2 w3-animate-top w3-white", "");
+    }
+}
+  */
+// Used to toggle the menu on small screens when clicking on the menu button
+function toggleFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+</script>
 <!-- That's all folks! --></body></html>
 <!-- Future ideas: search engine | podcast | more arduino and raspberry projects -->
 <!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023  |  Sub: papaspyrou.alexandros@gmail.com -->
-<!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com  |   -->
+<!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com   -->
 
-<!-- ===================================================================================================   -->
-<!-- OLD CHAT OR EMAIL https://www.tawk.to/ > 
-<script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script>
-< end of old chat -->
+<!-- ===================== -->
