--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -137,13 +138,13 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="1enotita">
     <h4 class="w3-center">Μελέτη και Κατασκευή του</h4>
     <h3 class="w3-center">MICHATRON</h3>
-<p class="w3-center"><em>Ρομποτάκι, αυτοκινούμενη ρομποτική πλατφόρμα ή όπως αλλιώς θέλετε να το πείτε… Εγώ το λέω Michatron. Σε μια πλαστική βάση με 2 ρόδες (και μια μπίλια για ισορροπία), βάζουμε αισθητήρια led-άκια, κινητήρες και το ArduinoUno. Το Michatron… Ξεκινάει με μη χειροκίνητο τρόπο… Ακολουθεί μια μαύρη γραμμή… Προσπερνάει τα εμπόδια που θα βρει… και όταν φτάσει στο τέρμα… Σταματάει αυτόματα!</em></p><br>
+<p class="w3-center"><em>Ρομποτάκι, αυτοκινούμενη ρομποτική πλατφόρμα ή όπως αλλιώς θέλετε να το πείτε… Εγώ το λέω Michatron. Σε μια πλαστική βάση με 2 ρόδες (και μια μπίλια για ισορροπία), βάζουμε αισθητήρια led-άκια, κινητήρες και το ArduinoUno. Το Michatron… Ξεκινάει με μη χειροκίνητο τρόπο… Ακολουθεί μια μαύρη γραμμή… Προσπερνάει τα εμπόδια που θα βρει… και όταν φτάσει στο τέρμα… Σταματάει αυτόματα!</em><br><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button>  <button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-code"></i></button></p><br>
   
   <h4 class="w3-center">Το κύκλωμα του</h4>
     <h3 class="w3-center">Φωτοδιακόπτη</h3>
 <p class="w3-center"><em>Ο πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.
 Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.
-<br>Κάπως έτσι το φτιάξαμε στο εργ. Ηλ. Συστημάτων.</em></p><br>
+<br>Κάπως έτσι το φτιάξαμε στο εργ. Ηλ. Συστημάτων.</em><br><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button>  <button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-gears"></i></button></p><br>
 
 </div>
 
@@ -167,35 +168,10 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="2enotita">
     <h4 class="w3-center">Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. </h4>
     <h3 class="w3-center">“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet)</h3>
-<p class="w3-center"><em>❝ Ας κλείσουμε με την ελπίδα πως πάντα η τεχνολογία θα υπάρχει και θα εξελίσσεται με σκοπό να διευκολύνει τον άνθρωπο και να του προσφέρει μια πιο ευχάριστη και δημιουργική ζωή. Αυτός είναι αλώστε και ο σκοπός της, και οι κοινωνίες θα πρέπει να φροντίσουν να μην υπάρξει ο κίνδυνος να αποκλίνει από αυτόν. ❞</em></p><br> 
- <!-- About Section -->
-<div class="w3-container" style="padding:20px 16px" id="about">
-<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+<p class="w3-center"><em>❝ Ας κλείσουμε με την ελπίδα πως πάντα η τεχνολογία θα υπάρχει και θα εξελίσσεται με σκοπό να διευκολύνει τον άνθρωπο και να του προσφέρει μια πιο ευχάριστη και δημιουργική ζωή. Αυτός είναι αλώστε και ο σκοπός της, και οι κοινωνίες θα πρέπει να φροντίσουν να μην υπάρξει ο κίνδυνος να αποκλίνει από αυτόν. ❞</em><br><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button></p><br>
 
-  <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-quarter">
-      <i class="fa fa-code w3-margin-bottom w3-jumbo w3-center"></i>
-      <p class="w3-large"><b>Code</b></p>
-      <p>kremaλaki (VB)</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large"><b>Make</b></p>
-            <p>LDR swich 
-			<br>Michatron</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-paper-plane-o w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large"><b>ideas & designs</b></p>
-           <p>Blog</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-folder-open-o w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large"><b>Files Repository</b></p>
-           <p>DropBox</p>
-    </div>
-  </div>
-</div>
+ <!-- About Section -->
+
 </div>
 
 <!-- Footer -->
