--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,3 @@
-
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -138,16 +137,21 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="1enotita">
     <h4 class="w3-center">Μελέτη και Κατασκευή του</h4>
     <h3 class="w3-center">MICHATRON</h3>
-<p class="w3-center"><em>Ρομποτάκι, αυτοκινούμενη ρομποτική πλατφόρμα ή όπως αλλιώς θέλετε να το πείτε… Εγώ το λέω Michatron. Σε μια πλαστική βάση με 2 ρόδες (και μια μπίλια για ισορροπία), βάζουμε αισθητήρια led-άκια, κινητήρες και το ArduinoUno. Το Michatron… Ξεκινάει με μη χειροκίνητο τρόπο… Ακολουθεί μια μαύρη γραμμή… Προσπερνάει τα εμπόδια που θα βρει… και όταν φτάσει στο τέρμα… Σταματάει αυτόματα!</em><br><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button>  <button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-code"></i></button></p><br>
-  
+<p class="w3-center"><em>Ρομποτάκι, αυτοκινούμενη ρομποτική πλατφόρμα ή όπως αλλιώς θέλετε να το πείτε… Εγώ το λέω Michatron. Σε μια πλαστική βάση με 2 ρόδες (και μια μπίλια για ισορροπία), βάζουμε αισθητήρια, led-άκια, κινητήρες και το ArduinoUno. Το Michatron, ξεκινάει με μη χειροκίνητο τρόπο, ακολουθεί μια μαύρη γραμμή, προσπερνάει τα εμπόδια που θα βρει, και όταν φτάσει στο τέρμα σταματάει αυτόματα!</em><br>
+
+<a href="https://vimeo.com/141997888"><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-play"></i></button></a> 
+<a href="https://issuu.com/a-papaspyrou/docs/michatron_papaspyrou_alexandros"><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button></a>
+<a href="https://codebender.cc/embed/sketch:208552#Michatron.ino"><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-code"></i></button></a></p><br>
+
   <h4 class="w3-center">Το κύκλωμα του</h4>
-    <h3 class="w3-center">Φωτοδιακόπτη</h3>
-<p class="w3-center"><em>Ο πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης.
-Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.
-<br>Κάπως έτσι το φτιάξαμε στο εργ. Ηλ. Συστημάτων.</em><br><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button>  <button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-gears"></i></button></p><br>
+  <h3 class="w3-center">Φωτοδιακόπτη</h3>
+<p class="w3-center"><em>Ο πιο απλός αυτοματισμός μπορεί να είναι ένας φωτοδιακόπτης. Όταν βραδιάζει, ανάβουν τα φώτα του σπιτιού.
+<br>Κάπως έτσι το φτιάξαμε στο εργ. Ηλ. Συστημάτων.</em><br>
+
+<button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button>  
+<a href="https://vimeo.com/137624163"><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-play"></i></button></a></p><br>
 
 </div>
-
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
   <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
@@ -168,7 +172,21 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="2enotita">
     <h4 class="w3-center">Μια εργασία για το μάθημα της Ιστορίας των Αυτομάτων & της Τεχνολογίας. </h4>
     <h3 class="w3-center">“ Η εξέλιξη των Η/Υ ” (από τον άβακα στο Tablet)</h3>
-<p class="w3-center"><em>❝ Ας κλείσουμε με την ελπίδα πως πάντα η τεχνολογία θα υπάρχει και θα εξελίσσεται με σκοπό να διευκολύνει τον άνθρωπο και να του προσφέρει μια πιο ευχάριστη και δημιουργική ζωή. Αυτός είναι αλώστε και ο σκοπός της, και οι κοινωνίες θα πρέπει να φροντίσουν να μην υπάρξει ο κίνδυνος να αποκλίνει από αυτόν. ❞</em><br><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button></p><br>
+<p class="w3-center"><em>❝ Ας κλείσουμε με την ελπίδα πως πάντα η τεχνολογία θα υπάρχει και θα εξελίσσεται με σκοπό να διευκολύνει τον άνθρωπο και να του προσφέρει μια πιο ευχάριστη και δημιουργική ζωή. Αυτός είναι αλώστε και ο σκοπός της, και οι κοινωνίες θα πρέπει να φροντίσουν να μην υπάρξει ο κίνδυνος να αποκλίνει από αυτόν. ❞</em><br>
+<a href="https://issuu.com/a-papaspyrou/docs/computerevolution_alexandros_papasp">
+<button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button></a>
+<a href="https://www.slideshare.net/alexandrospapaspurou/computer-evolution-48891311"><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-clone"></i></button></a>
+</p><br>
+
+
+
+    <h4 class="w3-center">Μια εργασία για το Εργαστήριο Βιομηχανικών Εγκαταστάσεων Αυτοματισμού.</h4>
+    <h3 class="w3-center">Τεχνικές MPPT</h3>
+<p class="w3-center"><em>Ανάλυση Τεχνικών Ανίχνευσης Σημείου Μέγιστης Ισχύος Φωτοβολταϊκού.</em><br>
+<a href="https://issuu.com/a-papaspyrou/docs/mppt_final">
+<button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-book"></i></button></a>
+<a href="https://www.slideshare.net/alexandrospapaspurou/mppt-30080120"><button class="w3-button w3-padding-large w3-black" style="margin-top:64px"><i class="fa fa-clone"></i></button></a>
+</p><br>
 
  <!-- About Section -->
 
@@ -177,8 +195,7 @@ body, html {
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
- <!-- Footer -->
-
+   <a href="https://drive.google.com/open?id=0B4_FfowS43ESQmVuMGN1cDR4a1k" class="w3-button w3-light-grey"><i class="fa fa-arrow-down w3-margin-right"></i>Download My Cv</a>
 <!-- SM --><div class="w3-black w3-center w3-padding-12">
 <a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:white"></i></a>
 <a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:white"></i></a>
@@ -205,14 +222,11 @@ body, html {
 <script>
 // Script to open and close sidebar
 function w3_open() {
-    document.getElementById("mySidebar").style.display = "block";
-    document.getElementById("myOverlay").style.display = "block";
+  document.getElementById("mySidebar").style.display = "block";
+  document.getElementById("myOverlay").style.display = "block";
 }
-function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-    document.getElementById("myOverlay").style.display = "none"
+function w3_close() {  document.getElementById("mySidebar").style.display = "none";  document.getElementById("myOverlay").style.display = "none"
 }
-
 // Modal Image Gallery
 function onClick(element) {
   document.getElementById("img01").src = element.src;
@@ -242,9 +256,19 @@ function toggleFunction() {
     }
 }
 </script>
-<!-- That's all folks! --></body></html>
-<!-- Future ideas: search engine | podcast | more arduino and raspberry projects -->
-<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023  |  Sub: papaspyrou.alexandros@gmail.com -->
-<!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com   -->
+</body>
+</html>
 
-<!-- ===================== -->
+<!--
+
+That's all folks! 
+
+Future ideas: search engine | podcast | more arduino and raspberry projects
+
+Mail: a-papaspyrou@outlook.com.gr  
+Mob: 00306949452023
+Sub: papaspyrou.alexandros@gmail.com 
+
+Πηγές:  https://www.w3schools.com  |  https://www.udacity.com
+
+-->
