--- a/cv.html
+++ b/cv.html
@@ -1,12 +1,17 @@
-<!-- My Online CV
+<!--CVwebpage
+
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 12/7/2017 Contact: alexispapy@gmail.com
--->
-<!DOCTYPE html>
+Last Update: 21/9/2017  |  Pre-alpha Stage -->
+<!DOCTYPE html> 
 <html>
-<title> Papaspyrou | CV</title>
+<title>Papaspyrou Alexandros | CV</title>
 <link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
+<meta charset="UTF-8">
+<script src="https://www.w3schools.com/lib/w3.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
@@ -30,31 +35,10 @@ body, html {
 </style>
 <body class="w3-light-grey">
 
+<div w3-include-html="https://alexandroshub.github.io/navtopmenu.html"></div> 
+<script>w3.includeHTML();</script>
 
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-<div class="w3-bar w3-black w3-card-2" id="myNavbar">
-  
-<a href="https://alexandroshub.github.io/index" class="w3-bar-item w3-button w3-wide">
 
-<img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:30px;" class="w3-circle w3-left w3-hover-opacity"> &nbsp;
-
-<b> Papaspyrou</b> Alexandros</a>
-    <!-- Right-sided navbar links -->
-<div class="w3-right w3-hide-small"><a href="https://alexandroshub.github.io/projects" class="w3-bar-item w3-button">
-    <i class="fa fa-th"></i> PROJECTS</a>  </div>
-
-</div><!-- Hide right-floated links on small screens and replace them with a menu icon -->
-<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
-<i class="fa fa-bars w3-padding-right w3-padding-left"></i></a></div>
-
-<!-- Sidenav on small screens when clicking the menu icon -->
-<nav class="w3-sidenav w3-black w3-card-2 w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidenav">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-large w3-padding-16">Close </a>
-  <a href="https://alexandroshub.github.io/projects" onclick="w3_close()">PROJECTS</a>
-  <a href="https://alexandroshub.github.io/cv" onclick="w3_close()">CV</a>
-
-</nav>
 <br><br><br>
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -212,36 +196,23 @@ body, html {
         </div>
 
 <div class="w3-container">
-          <h5 class="w3-opacity"><b> THE CUBE </b></h5>
+          <h5 class="w3-opacity"><b> THE CUBE | </b> Junior Embedded Developer</h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>καλοκαίρι 2017</h6>
 
-<p>soon</p>
+<p>Το project αφορούσε στον αυτόνομο έλεγχο και οδήγηση οχήματος κατασκευασμένο απο την Robocoaster με χρήση Beckhoff PLC.</p>
 <i class="fa fa-bullhorn fa-fw w3-margin-right w3-large "></i>
 <a href="https://www.linkedin.com/in/alexandrospapaspyrou" style="text-decoration:none;">είπαν</a>
-        </div>
-
-      </div>
-<!-- End Right Column -->
-    </div>
-<!-- End Grid -->
-  </div>
-<!-- End Page Container -->
+ 	</div>
 </div>
-
+<!-- End Right Column --></div>
+<!-- End Grid --></div>
+<!-- End Page Container --></div>
 <br>
+<!-- Footer -->
+<div w3-include-html="https://alexandroshub.github.io/footer.html"></div>
+<script>w3.includeHTML();</script><!-- End footer -->
 
-
-
-
-
-
-<!-- Footer --><footer class="w3-container w3-padding-6 w3-black ">
-<!-- top --> &nbsp; <a href="#home" class="w3-button w3-black"><i class="fa fa-arrow-up"></i></a>
-<!-- blog --> &nbsp; <a href="https://robodayblog.wordpress.com/" class="w3-button w3-black"><i class="fa fa-wordpress"></i></a>
-<!-- linkedin --> &nbsp; <a href="https://gr.linkedin.com/in/alexandrospapaspyrou" class="w3-button w3-black"><i class="fa fa-linkedin"></i></a>
-<!-- CC --><br><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2017
-</footer><!-- End footer -->
-<!-- chat -->
+<!--  
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
@@ -252,5 +223,14 @@ s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();</script>
-<!-- That's all folks! -->  
-</body></html>
+-->
+
+</body>
+</html>
+
+<!--
+That's all folks! 
+
+Mail: a-papaspyrou@outlook.com.gr  
+Mob: 00306949452023
+-->
