--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,13 @@ body, html {
 <p class="w3-large"><b><i class="fa fa-gear w3-text-black fa-spin" style="font-size:24px " ></i> Skills</b></p>
 <p>
 <br>
-•  soon </p></div></div><br>
+HTML / PHP / MySQL / HAMPP
+C / C++ / C# / VB / Python / TwinCAT
+Matlab / Simulink / LabView / Multisim
+Arduino / Raspberry / Siemens και Beckhoff PLC
+Microsoft και LibreOffice
+Με εμπειρία στις κολλήσεις και τα ηλεκτρονικά
+και πολύ καλή γνώση και χρήση Η/Υ.</p></div></div><br>
 
 <div class="w3-white w3-text-grey w3-card-4">
 <div class="w3-container">
@@ -197,11 +203,11 @@ body, html {
 
 <div class="w3-container">
           <h5 class="w3-opacity"><b> THE CUBE | </b> Junior Embedded Developer</h5>
-          <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>καλοκαίρι 2017</h6>
-
+          <h6 class="w3-text-black">
+          <span class="w3-tag w3-black w3-round"><i class="fa fa-calendar fa-fw w3-margin-right"></i>καλοκαίρι 2017 </span> 
+          <span class="w3-tag w3-black w3-round"><i class="fa fa-pencil-square-o fa-fw w3-margin-right w3-large "></i><a href="" style="text-decoration:none;">Doc</a></span>
+          <span class="w3-tag w3-black w3-round"><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large "></i><a href="" style="text-decoration:none;">είπαν</a></span></h6>
 <p>Το project αφορούσε στον αυτόνομο έλεγχο και οδήγηση οχήματος κατασκευασμένο απο την Robocoaster με χρήση Beckhoff PLC.</p>
-<i class="fa fa-bullhorn fa-fw w3-margin-right w3-large "></i>
-<a href="https://www.linkedin.com/in/alexandrospapaspyrou" style="text-decoration:none;">είπαν</a>
  	</div>
 </div>
 <!-- End Right Column --></div>
