--- a/navtopmenu.html
+++ b/navtopmenu.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html> 
 <html>
 <meta charset="UTF-8">
@@ -24,7 +25,7 @@ body, html {
 	<div class="w3-bar w3-black w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
 <a href="http://a-papaspyrou.tk" class="w3-bar-item w3-button w3-wide">
 <img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:30px;" class="w3-circle w3-left w3-hover-opacity"> &nbsp; 
-<b> Papaspyrou</b> Alexandros</a>
+<span class="w3-animate-opacity"><b>Papaspyrou</b><span class="w3-hide-small">Alexandros</span></span></a>
 
 <!-- Right-sided navbar links -->
 <div class="w3-right w3-hide-small">
