--- a/projects.html
+++ b/projects.html
@@ -44,13 +44,13 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    background-image: url("https://78.media.tumblr.com/bbb34e90beae9257a52278d712fae168/tumblr_ox7ezttVHF1si59zfo1_1280.jpg");
     min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    background-image: url("https://78.media.tumblr.com/3e6bda31cebf124e527e6a1393981cf4/tumblr_ox7ezttVHF1si59zfo2_1280.jpg");
     min-height: 400px;
 }
 
